@@ -8,16 +8,13 @@ import br.com.fiap.reservas.controller.dto.BuscarReservasDto;
 import br.com.fiap.reservas.controller.dto.DataHoraDto;
 import br.com.fiap.reservas.controller.dto.ReservaDto;
 import br.com.fiap.reservas.entities.EnderecoEntity;
-import br.com.fiap.reservas.entities.MesaEntity;
 import br.com.fiap.reservas.entities.ReservaEntity;
 import br.com.fiap.reservas.entities.RestauranteEntity;
-import br.com.fiap.reservas.enums.StatusMesa;
-import br.com.fiap.reservas.utils.DateFormat;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import br.com.fiap.reservas.utils.JsonFormatUtil;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
@@ -25,21 +22,19 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.util.Collections;
 import java.util.List;
 
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 public class ReservaSpringControllerTest {
 
-    private MockMvc mockMvc;
+    private ReservaSpringController reservaSpringController;
 
     @Mock
     private CadastrarReservaController cadastrarReservaController;
-
-    @Mock
-    private ReservaSpringController reservaSpringController;
 
     @Mock
     private BuscarReservasController buscarReservasController;
@@ -50,83 +45,85 @@ public class ReservaSpringControllerTest {
     @Mock
     private AtualizarQtdPessoasReservaController atualizarQtdPessoasReservaController;
 
-    AutoCloseable mock;
+    private MockMvc mockMvc;
+    private AutoCloseable mock;
 
-    private ReservaEntity reservaEntity;
-
-    private final EnderecoEntity enderecoEntityMock = new EnderecoEntity("13181701", "logradouro",
-            "bairro", "cidade", "numero", "complemento");
+    private final EnderecoEntity endereco = new EnderecoEntity("cep", "logradouro", "bairro", "cidade", "numero", "complemento");
+    private final RestauranteEntity restauranteEntity = new RestauranteEntity("nome", endereco, "tipo", LocalTime.of(10, 0),
+            LocalTime.of(22, 0), 10);
 
     @BeforeEach
     public void setup() {
         mock = MockitoAnnotations.openMocks(this);
-        reservaSpringController = new ReservaSpringController(
-                cadastrarReservaController, buscarReservasController, atualizarStatusReservaController,
-                atualizarQtdPessoasReservaController);
-
-        List<MesaEntity> mesasLivres = List.of(new MesaEntity(1, StatusMesa.LIVRE));
-        RestauranteEntity restauranteEntity = new RestauranteEntity(
-                "Restaurante", enderecoEntityMock, "tipoCozinha", LocalTime.now(), LocalTime.now(),
-                10, mesasLivres);
-        reservaEntity = new ReservaEntity(restauranteEntity, "nome", List.of(),
-                LocalDateTime.now());
+        reservaSpringController = new ReservaSpringController(cadastrarReservaController, buscarReservasController,
+                atualizarStatusReservaController, atualizarQtdPessoasReservaController);
 
         mockMvc = MockMvcBuilders
                 .standaloneSetup(reservaSpringController)
                 .build();
     }
 
-    @Test
-    void cadastrarReservaDeveRetornarReservaDto() throws Exception {
-        ReservaDto reservaDto = new ReservaDto(reservaEntity);
+    @AfterEach
+    public void close() throws Exception {
+        mock.close();
+    }
 
-        Mockito.when(cadastrarReservaController.cadastrarReserva(Mockito.any()))
-                .thenReturn(reservaDto);
+    @Test
+    public void cadastrarReserva() throws Exception {
+        ReservaDto reservaDto = new ReservaDto(new ReservaEntity(1L, restauranteEntity, "usuario", List.of(),
+                LocalDateTime.of(2021, 10, 10, 10, 0)));
+
+        when(cadastrarReservaController.cadastrarReserva(reservaDto)).thenReturn(reservaDto);
 
         mockMvc.perform(post("/reservas")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(reservaDto)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.reservaId").value(reservaDto.reservaId()))
-                .andExpect(jsonPath("$.usuario").value(reservaDto.usuario()));
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(JsonFormatUtil.asJsonString(reservaDto))
+        ).andExpect(status().isOk());
+
+        verify(cadastrarReservaController, times(1)).cadastrarReserva(reservaDto);
     }
 
     @Test
-    void buscarReservasPorRestauranteIdDeveRetornarListaDeReservas() throws Exception {
+    public void buscarReservasPorRestauranteId() throws Exception {
         Long restauranteId = 1L;
-        List<BuscarReservasDto> reservas = List.of(new BuscarReservasDto(reservaEntity));
+        List<BuscarReservasDto> reservas = Collections.singletonList(new BuscarReservasDto(new ReservaEntity(restauranteEntity, "usuario", 1)));
 
-        Mockito.when(buscarReservasController.buscarReservasPorRestaurante(Mockito.eq(restauranteId)))
-                .thenReturn(reservas);
+        when(buscarReservasController.buscarReservasPorRestaurante(restauranteId)).thenReturn(reservas);
 
-        mockMvc.perform(get("/reservas/{restauranteId}", restauranteId))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()").value(reservas.size()))
-                .andExpect(jsonPath("$[0].restauranteId").value(reservas.getFirst().restauranteId()));
+        mockMvc.perform(get("/reservas/{restauranteId}", restauranteId)
+                .contentType(MediaType.APPLICATION_JSON)
+        ).andExpect(status().isOk());
+
+        verify(buscarReservasController, times(1)).buscarReservasPorRestaurante(restauranteId);
     }
 
     @Test
-    void atualizarStatusReservaDeveChamarController() throws Exception {
-        String nomeUsuario = "nome";
-        DataHoraDto dataHoraDto = new DataHoraDto(DateFormat.convertFromLocalDateTimeToString(LocalDateTime.now()));
+    public void atualizarStatusReserva() throws Exception {
+        String nomeUsuario = "usuario";
+        DataHoraDto dataHoraDto = new DataHoraDto("10:00");
+
+        doNothing().when(atualizarStatusReservaController).atualizarStatusReserva(nomeUsuario, dataHoraDto.horaChegada());
 
         mockMvc.perform(put("/reservas/atualiza-status/{nomeUsuario}", nomeUsuario)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(dataHoraDto)))
-                .andExpect(status().isOk());
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(JsonFormatUtil.asJsonString(dataHoraDto))
+        ).andExpect(status().isOk());
 
-        Mockito.verify(atualizarStatusReservaController).atualizarStatusReserva(nomeUsuario, dataHoraDto.horaChegada());
+        verify(atualizarStatusReservaController, times(1)).atualizarStatusReserva(nomeUsuario, dataHoraDto.horaChegada());
     }
 
     @Test
-    void atualizarQtdPessoasReservaDeveChamarController() throws Exception {
-        ReservaDto reservaDto = new ReservaDto(reservaEntity);
+    public void atualizarQtdPessoasReserva() throws Exception {
+        ReservaDto reservaDto = new ReservaDto(new ReservaEntity(1L, restauranteEntity, "usuario", List.of(),
+                LocalDateTime.of(2021, 10, 10, 10, 0)));
+
+        doNothing().when(atualizarQtdPessoasReservaController).atualizarQtdPessoasReserva(reservaDto);
 
         mockMvc.perform(put("/reservas/atualiza-qtd-pessoas")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(reservaDto)))
-                .andExpect(status().isOk());
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(JsonFormatUtil.asJsonString(reservaDto))
+        ).andExpect(status().isOk());
 
-        Mockito.verify(atualizarQtdPessoasReservaController).atualizarQtdPessoasReserva(reservaDto);
+        verify(atualizarQtdPessoasReservaController, times(1)).atualizarQtdPessoasReserva(reservaDto);
     }
 }
